# weathermonitor

./: .gitignore  Dockerfile  fabfile.py  fabric.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
weathermonitor/: __main__.py  restclient.py
