[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "weathermonitor"
version = "1.0.7"
authors = [
    {name = "Michel Albert", email = "michel@albert.lu"},
]
description = "Simple weather-monitor for Zigbee/Phoscon sensors"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = []
dependencies = [
    "packaging",
    "pytz",
    "requests",
    "python-dateutil",
    "gouge",
    "influxdb_client",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weathermonitor*"]

[tool.black]
line_length = 80

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
use_parentheses = true
virtual_env = "env"

[tool.pylint."messages control"]
disable = ["C0330", "C0326"]

[tool.pylint.format]
max-line-length = "80"
